@@ -348,6 +348,7 @@ ModCallbacks.MC_PRE_ENTITY_SET_COLOR = 1486
 ModCallbacks.MC_POST_ENTITY_SET_COLOR = 1487
 ModCallbacks.MC_POST_START_AMBUSH_WAVE = 1488
 ModCallbacks.MC_POST_START_GREED_WAVE = 1489
+ModCallbacks.MC_EVALUATE_TEAR_HIT_PARAMS = 1490
 
 AddHealthType = {
 	NONE	=	0,
