@@ -1540,6 +1540,7 @@ local CustomRunCallbackLogic = {
 	[ModCallbacks.MC_PRE_STATUS_EFFECT_APPLY] = RunPreStatusEffectApplyCallback,
 	[ModCallbacks.MC_PLAYER_HEALTH_TYPE_CHANGE] = RunNoReturnCallback,
 	[ModCallbacks.MC_EVALUATE_STAT] = RunAdditiveThirdArgCallback,
+	[ModCallbacks.MC_EVALUATE_TEAR_HIT_PARAMS] = RunAdditiveThirdArgCallback,
 }
 
 for _, callback in ipairs({
